--- a/client_card.html
+++ b/client_card.html
@@ -24,7 +24,7 @@
             <p>Тема следующего занятия</p>
             <span id="subject">Scratch. Знакомство с визуальным языком программирования</span>
             <p>Обратная связь от тьютора</p>
-            <span id="resume"><div class="item">Успеваемость все так же на высоте! Поддерживает все идеи тьютора относительно дополнительных, креативных заданий. С ребятами коммуницирует отлично. В процессе урока отвечает на вопросы, выполняет все инструкции. Да, порой бывает отвлекается на разговоры с соседом Яном,но на замечания реагирует адекватно, быстро возвращается к работе. Приятный и способный ученик. Его заинтересованность и стремления приведут к успеху!</div></span>
+            <span id="resume"><div class="item">Успеваеhgfcvbjuytfvbjytrf lkjhygfdxchjkuytgf lkkfgdcxvkuytfd lfdkyutfdfcvjkyg ,jhgfdcx kjhgfdc lkjhgf lkjhgf l;kjhgf lkjhg dcvhjkiuytrdcfvhjuytrdfghjuytrdfghuy trdcfvghytrdcfgytrdc fghytrdcfgytrdcfghytrdcvhytrfvghytfvhytfмость все так же на высоте! Поддерживает все идеи тьютора относительно дополнительных, креативных заданий. С ребятами коммуницирует отлично. В процессе урока отвечает на вопросы, выполняет все инструкции. Да, порой бывает отвлекается на разговоры с соседом Яном,но на замечания реагирует адекватно, быстро возвращается к работе. Приятный и способный ученик. Его заинтересованность и стремления приведут к успеху!</div></span>
             <!-- <center><div class="loader"></div></center> -->
         </section>
     </div>
