--- a/client_card.html
+++ b/client_card.html
@@ -14,9 +14,9 @@
                 <section id="account">
                     <img src="wallet_img.png" id="walletImg"><b id="kiberons">500К</b>
                 </section>
-                <p id="fullname">Федорчук Валерия Ивановна</p>
-                <b id="dob">25.03.2003</b>
-                <b id="location">Локация</b>
+                <p id="fullname" style="font-family: 'pf_beausans_prolight';">Федорчук Валерия Ивановна</p>
+                <b id="dob" style="font-family: 'pf_beausans_prolight';">25.03.2003</b>
+                <b id="location" style="font-family: 'pf_beausans_prolight';">Локация</b>
             </section>
         </section>
         <a href="https://kiber-one.club/">Перейти в личный кабинет</a>
