--- a/choose_child.html
+++ b/choose_child.html
@@ -6,8 +6,9 @@
     <script type = "module" src="./set_choose_child_style.js"></script>
 </head>
 <body>
-    <select multiple id="profiles">
-        <option selected value="5127">андрей тест баранки</option>
+    <select id="profiles">
+        <option value="-1">Укажите ФИО ребенка</option>
+        <option value="5127">андрей тест баранки</option>
         <option value="5128">андрей тест2 баранки</option>
     </select>
     <button id="open">Открыть профиль</button>
