--- a/client_card.html
+++ b/client_card.html
@@ -3,11 +3,11 @@
 <head>
     <title>Профиль</title>
     <link rel="stylesheet" type="text/css" href="client_card_style.css">
-    <link rel="stylesheet" type="text/css" href="spinner_style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="spinner_style.css"> -->
     <script type = "module" src="./set_client_card_style.js"></script>
 </head>
 <body>
-    <div id="loader"></div>
+    <!-- <div id="loader"></div> -->
     <div id="main">
         <section id="infoWithImage">
             <img src="profile_image.png" id="profileImg">
@@ -37,8 +37,3 @@
         </section>
     </div>
 </body>
-
-<script type="text/javascript"> 
-    var card = document.getElementById("main");
-    card.hidden = true;
-</script>
