--- a/client_card.html
+++ b/client_card.html
@@ -31,7 +31,7 @@
         <section id="feedback">
             <i>Оставьте обратную связь по работе нашей КИБЕР-школы!<br></i>
             <form id="feedbackForm">
-                <textarea placeholder="Отзыв" id="feedbackInput"></textarea>
+                <input placeholder="Отзыв" id="feedbackInput"></textarea>
                 <button id="sendButton">Отправить</button>
             </form>
         </section>
