--- a/client_card.html
+++ b/client_card.html
@@ -31,9 +31,10 @@
         <section id="feedback">
             <i>Оставьте обратную связь по работе нашей КИБЕР-школы!<br></i>
             <form id="feedbackForm">
-                <input placeholder="Отзыв" id="feedbackInput"></textarea>
+                <textarea placeholder="Отзыв" id="feedbackInput"></textarea>
                 <button id="sendButton">Отправить</button>
             </form>
         </section>
     </div>
 </body>
+</html>
