--- a/client_card.html
+++ b/client_card.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="client_card_style.css">
     <!-- <link rel="stylesheet" type="text/css" href="spinner_style.css"> -->
     <script type = "module" src="./set_client_card_style.js"></script>
+    <link rel="stylesheet" type="text/css" href="feed_back_form_style.css">
 </head>
 <body>
     <!-- <div id="loader"></div> -->
