--- a/client_card.html
+++ b/client_card.html
@@ -19,7 +19,7 @@
                 </section>
                 <p id="fullname" style="font-family: 'pf_beausans_prolight';">Федорчук Валерия Ивановна</p>
                 <b id="dob" style="font-family: 'pf_beausans_prolight';">25.03.2003</b>
-                <b id="location" style="font-family: 'pf_beausans_prolight';">Локация</b>
+                <b id="location" style="font-family: 'pf_beausans_prolight';">4000px</b>
             </section>
         </section>
         <a>Перейти в KIBERshop</a>
